fixed navbar icons alignment on mobile view

--- a/less/breakpoints/mobile/page-sections/header.less
+++ b/less/breakpoints/mobile/page-sections/header.less
@@ -37,6 +37,10 @@ header {
 				.nav-icons {
 					width: 94px;
 
+					.icons {
+						.flex();
+					}
+
 					img {
 						width: 16px;
 					}
