--- a/less/style.css
+++ b/less/style.css
@@ -2109,6 +2109,13 @@ footer .credits {
   header .header-content .user-buttons .nav-icons {
     width: 94px;
   }
+  header .header-content .user-buttons .nav-icons .icons {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+  }
   header .header-content .user-buttons .nav-icons img {
     width: 16px;
   }
